# eth-global-prague

./: README.md
akave-adapter/: Cargo.toml
akave-adapter/rust/src/: adapters.rs
akave-adapter/src/: adapters.rs  adapters.rs.bak
go-stater/: test-message.sh
go-stater/contracts/: Makefile
go-stater/contracts/message-box/: Makefile  MessageBox.abi  MessageBox.go  MessageBox.hex  MessageBox.sol
go-stater/contracts/vigil/: Makefile  Vigil.abi  Vigil.go  Vigil.hex
rofl/: Cargo.toml  Dockerfile  README.md  compose.yaml  pyproject.toml  rofl.yaml  rofl.yaml.old  rofl.yaml.old.2  server.py
rofl-bun/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile2  README.md  adapters.test.ts  adapters.ts  config.ts  docker-compose.yml  download-parquet.js  index.test.ts  index.ts  names-and-cities.parquet  package.json  readme2.md  upload-parquet.js  vault.ts  wallet.ts
rofl-bun/types/contracts/: Vault.ts
rofl-bun/types/contracts/factories/: Vault__factory.ts
rofl/src/: main.rs
rolf-test/: Dockerfile  bot.py  compose.yaml  rofl.yaml
scaffold-eth/: .gitignore  package-lock.json  package.json
