[package]
name = "akave-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
aws-config = "0.56.1"
aws-credential-types = "0.56.1"
aws-sdk-s3 = "0.33.0"
aws-smithy-runtime = { version = "0.56.1", features = ["client"] }
aws-smithy-types = "0.56.1"
http = "0.2"
tokio = { version = "1.35", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
dotenv = "0.15.0"
mockito = "1.7.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
